make topics function and answer function

--- a/lambda/Makefile
+++ b/lambda/Makefile
@@ -5,7 +5,7 @@ GOARCH=amd64
 BINARY=bootstrap
 
 build:
-	GOOS=$(GOOS) GOARCH=$(GOARCH) go build -o $(BINARY) main.go
+	GOOS=$(GOOS) GOARCH=$(GOARCH) go build -o $(BINARY) *.go
 	zip function.zip $(BINARY)
 
 clean:
