--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,35 +7,45 @@ on:
       - main
 
 jobs:
-  # frontend:
-  #   runs-on: ubuntu-latest
-  #   name: Build and Deploy Frontend
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v2
+  frontend:
+    runs-on: ubuntu-latest
+    name: Build and Deploy Frontend
+    if: contains(github.event.pull_request.files.*.path, 'frontend/')
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         node-version: '16'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
 
-  #     - name: Install dependencies
-  #       run: |
-  #         cd frontend
-  #         npm install
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm install
 
-  #     - name: Build Frontend
-  #       run: |
-  #         cd frontend
-  #         npm run build
+      - name: Build Frontend
+        run: |
+          cd frontend
+          npm run build
 
-  #     - name: Deploy Frontend
-  #       run: |
-  #         echo "Deploying frontend..."
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
+      - name: Deploy to S3
+        run: |
+          aws s3 rm s3://testyourenglish.site --recursive
+          aws s3 sync frontend/build/ s3://testyourenglish.site
 
   lambda:
     runs-on: ubuntu-latest
     name: Build and Deploy Lambda
+    if: contains(github.event.pull_request.files.*.path, 'lambda/')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -50,10 +60,13 @@ jobs:
           cd lambda
           make build
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
       - name: Deploy Lambda to AWS
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: 'eu-central-1'
         run: |
           aws lambda update-function-code --function-name testyourenglish --zip-file fileb://lambda/function.zip
