--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,9 @@ jobs:
   lambda:
     runs-on: ubuntu-latest
     name: Build and Deploy Lambda
-    if: contains(github.event.pull_request.files.*.path, 'lambda/')
+    if: |
+      contains(github.event.pull_request.files.*.path, 'lambda/')
+      contains(github.event.pull_request.files.*.path, 'lambda')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
