--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and Deploy Frontend
     if: |
-      contains(github.event.pull_request.files.*.path, 'frontend/') ||
+      contains(github.event.pull_request.files.*.path, 'frontend/**') ||
       contains(github.event.pull_request.files.*.path, 'frontend')
     steps:
       - name: Checkout repository
@@ -48,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Build and Deploy Lambda
     if: |
-      contains(github.event.pull_request.files.*.path, 'lambda/') ||
+      contains(github.event.pull_request.files.*.path, 'lambda/**') ||
       contains(github.event.pull_request.files.*.path, 'lambda')
     steps:
       - name: Checkout repository
