--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy to S3
         run: |
           aws s3 rm s3://testyourenglish.site --recursive
-          aws s3 sync frontend/build/ s3://testyourenglish.site
+          aws s3 sync frontend/dist/ s3://testyourenglish.site
 
   lambda:
     runs-on: ubuntu-latest
